feat: API endpoint for building signup TX (#63)
Fixes #46
